--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -17,7 +17,7 @@ body {
     top:0;
     justify-content: space-between;
     align-items: center;
-    background-color: #67308D;
+    background-color: #673147;
     height: 5rem;
     width: 100%;
     z-index:10;
@@ -68,7 +68,7 @@ body {
     position: relative;
     top: 5px;
     margin: 2px;
-    background-color: #901bb7;
+    background-color: #673147;
     border: none;
     color: #ffffff;
     width: 90px;
