--- a/src/main/resources/static/style/pdp.css
+++ b/src/main/resources/static/style/pdp.css
@@ -14,7 +14,7 @@ body {
     top:0;
     justify-content: space-between;
     align-items: center;
-    background-color: #67308D;
+    background-color: #673147 ;
     height: 5rem;
     width: 100%;
     z-index:10;
@@ -84,10 +84,11 @@ button {
     display: flex;
     position: relative;
     top: 6rem;
-    padding: 1.875rem;
+    padding: 10px 10px;
     background-color: white;
     border-radius: 0.625rem;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+    right: 10%;
 }
 
 .image-section {
@@ -113,8 +114,9 @@ button {
 }
 
 .product-details {
-    margin-left: 2.5rem;
+    margin-left: 2.0rem;
     width: 50%;
+    left: 0%;
 }
 
 .badge {
