--- a/src/main/resources/static/style/plp.css
+++ b/src/main/resources/static/style/plp.css
@@ -22,7 +22,7 @@ hr{
     top:0;
     justify-content: space-between;
     align-items: center;
-    background-color: #67308D;
+    background-color: #673147;
     height: 5rem;
     width: 100%;
     z-index:10;
@@ -79,7 +79,7 @@ hr{
 .head-filter{
     position:relative;
     padding:1.25rem 0.625rem;
-    margin-left:0.3125rem;
+    margin: left 30px;
 }
 .categories{
     text-transform: uppercase;
@@ -131,7 +131,7 @@ hr{
     background-color:#EFEFEF;
     position: relative;
     display:block;
-    left:18.75rem;
+    left: 20%;
     width:80%;
 }
 
@@ -142,7 +142,7 @@ hr{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 2.5rem;
+    gap: 1.5rem;
 }
 
 .product-card {
