--- a/src/main/resources/templates/customer/widget.html
+++ b/src/main/resources/templates/customer/widget.html
@@ -68,15 +68,12 @@
         </main>
     </div>
 
-   
-
-    
 
     <!--Modal-->
     <div class="widgetModel d-none">
         <div class="modal-box">
             <div class="cross-icon">
-                <button onclick="closeModal()" id="closebtn"><i class="fa-solid fa-xmark"></i></button>
+                <button id="closebtn"><i class="fa-solid fa-xmark"></i></button>
             </div>
             <div class="modal-header">
                 <h2>Add product to widget</h2>
