--- a/src/main/resources/templates/customer/product.html
+++ b/src/main/resources/templates/customer/product.html
@@ -59,8 +59,7 @@
                 <input type="text" placeholder="Product Price" name="productPrice" id="productPrice">
 
                 <label for="productDescription">Product Description:</label>
-                <textarea placeholder="Product Description" name="productDescription"
-                    id="productDescription"></textarea>
+                <textarea placeholder="Product Description" name="productDescription" id="productDescription"></textarea>
 
                 <label for="productImage">Product Image:</label>
                 <input type="file" name="productImageFile" accept="image/*" id="productImage">
