--- a/src/main/resources/static/style/product.css
+++ b/src/main/resources/static/style/product.css
@@ -85,7 +85,7 @@ th {
     background: #6b2e96;
     color: white;
     border: none;
-    padding: 5% 10%;
+    padding: 5% 8%;
     cursor: pointer;
     border-radius: 0.313rem;
     margin-right: 0.5rem;
@@ -215,12 +215,20 @@ label {
     background: #218838;
 }
 
+#categorybutton{
+    position:relative;
+    top:3vh;
+    left:-5vw;
+}
+
 .close-btn {
+    position:relative;
+    top:-3.8vh;
+    left:6vw;
     background: red;
     color: white;
     padding: 0.313rem;
     border: none;
     border-radius: 0.313rem;
     cursor: pointer;
-    margin-top: 0.625rem;
 }
