--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -47,12 +47,12 @@
         <aside class="sidebar">
             <h1>Fashin Admin</h1>
             <ul>
-                <li><a href="http://localhost:1211/customer/admin"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+                <li><a href="http://localhost:1211/admin/admin"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                 </li>
                 <li><a href="#"><i class="fas fa-shopping-cart"></i> Orders</a></li>
-                <li><a href="http://localhost:1211/customer/product"><i class="fas fa-box"></i> Products</a></li>
-                <li><a href="http://localhost:1211/customer/category"><i class="fas fa-tags"></i> Category</a></li>
-                <li><a href="http://localhost:1211/customer/widget"><i class="fas fa-tags"></i> Widget</a></li>
+                <li><a href="http://localhost:1211/admin/product"><i class="fas fa-box"></i> Products</a></li>
+                <li><a href="http://localhost:1211/admin/category"><i class="fas fa-tags"></i> Category</a></li>
+                <li><a href="http://localhost:1211/admin/widget"><i class="fas fa-tags"></i> Widget</a></li>
                 <li><a href="#"><i class="fas fa-cog"></i> Settings</a></li>
                 <li><a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
