OrderHistory Page created and added styles , plp product images sets properly according to the cards

--- a/src/main/resources/static/style/plp.css
+++ b/src/main/resources/static/style/plp.css
@@ -159,12 +159,13 @@ hr{
     width: 100%;
     height: 21.875rem;
     overflow: hidden;
+
 }
 
 .product-thumb {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .discount-tag {
