--- a/src/main/resources/static/style/cart.css
+++ b/src/main/resources/static/style/cart.css
@@ -1,21 +1,21 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-body{
-    height:100vh;
+body {
+    height: 100vh;
 }
 
-.navbar{
-    display:flex;
+.navbar {
+    display: flex;
     background-color: #67308D;
-    height:70px;
-    width:100%;
+    height: 70px;
+    width: 100%;
 }
 
 .logo-img {
-    position:absolute;
+    position: absolute;
     width: 130px;
     height: 68px;
 }
@@ -23,8 +23,8 @@ body{
 .search-container {
     position: relative;
     width: 500px;
-    top:17px;
-    left:40%;
+    top: 17px;
+    left: 40%;
 }
 
 .search-input {
@@ -38,7 +38,7 @@ body{
 .search-icon {
     position: absolute;
     top: 30%;
-    left:99%;
+    left: 99%;
     transform: translateY(-50%);
     font-size: 18px;
     color: #000000;
@@ -47,24 +47,54 @@ body{
 .dropdown {
     position: relative;
     display: inline-block;
-    left:50%;
-    top:18px;
+    left: 50%;
+    top: 18px;
 }
 
 .dropbtn {
-    background-color:#221737;
+    background-color: #221737;
     color: white;
     padding: 10px 30px;
     font-size: 16px;
-    font-weight:500;
+    font-weight: 500;
     letter-spacing: 2px;
     border: none;
     cursor: pointer;
-    border-radius:5px;
+    border-radius: 5px;
     transition: ease 0.2s;
 }
 
-/* The container <div> - hidden by default */
+.dropdown-payment{
+    display: block;
+    position: relative;
+    min-width: 250px;
+    background-color: #67308D;
+    z-index: 1;
+    float:right;
+    top:36.2rem;
+    right:1.2rem;
+    height:4rem;
+    
+}
+
+.dropdown-payment a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 18px;
+    transition: 0.4s ease;
+}
+
+.dropdown-payment a:hover {
+    background-color: #ddd;
+    font-size: 20px;
+}
+
+.dropdown:hover .dropdown-payment {
+    display: block;
+}
+
 .dropdown-content {
     display: none;
     position: absolute;
@@ -74,108 +104,107 @@ body{
     z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    font-size:18px;
-    transition:0.4s ease;
+    font-size: 18px;
+    transition: 0.4s ease;
 }
 
-/* Change color of links on hover */
 .dropdown-content a:hover {
     background-color: #ddd;
-    font-size:20px;
+    font-size: 20px;
 }
 
-/* Show the dropdown menu when hovering over the dropdown container */
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
 .dropdown:hover .dropbtn {
-    background-color:#221737;
-    color:#FB641B;
+    background-color: #221737;
+    color: #FB641B;
 }
-#Logout{
-    color:rgb(169, 5, 5);
-    font-size:18px;
+
+#Logout {
+    color: rgb(169, 5, 5);
+    font-size: 18px;
     font-weight: 900;
 }
 
-.main{
-    display:inline-block;
-    width:1000px;
-    position:relative;
-    left:30px;
-}
-
-.container{
-    margin-top:20px;
-    background-color:#EFEFEF;
-}
-
-.wrap{
-    position:relative;
-    margin-top:30px;
-    width:100%;
-    height:60px;
-    background-color:#EFEFEF;
-}
-
-.address-reference{
-    position:absolute;
-    font-size:16px;
-    font-weight: 300;
-    padding:20px;
-}
-.wrapper{
-    display:flex;
-    width:100%;
-}
-
-.cart-img{
-    padding:20px;
-    width:300px;
-    height:300px;
-}
-
-.address-update{
+.main {
+    display: inline-block;
+    width: 1000px;
     position: relative;
-    top:10px;
+    left: 30px;
+}
+
+.container {
+    margin-top:1rem;
+    background-color: #EFEFEF;
+}
+
+.wrap {
+    position: relative;
+    margin-top: 30px;
+    width: 100%;
+    height: 60px;
+    background-color: #EFEFEF;
+}
+
+.address-reference {
+    position: absolute;
+    font-size: 16px;
+    font-weight: 300;
+    padding: 20px;
+}
+
+.wrapper {
+    display: flex;
+    width: 100%;
+}
+
+.cart-img {
+    padding: 20px;
+    width: 300px;
+    height: 300px;
+}
+
+.address-update {
+    position: relative;
+    top: 10px;
     text-decoration: none;
-    float:right;
-    border:none;
-    padding:10px;
-    margin-right:10px;
-    border-radius:5px;
-    font-size:18px;
+    float: right;
+    border: none;
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+    font-size: 18px;
     font-weight: 600;
-    color:#ffffff;
-    background-color:#67308D;
-    transition:ease 0.5s;
+    color: #ffffff;
+    background-color: #67308D;
+    transition: ease 0.5s;
 }
 
-.address-update:hover{
-    color:#FB641B;
+.address-update:hover {
+    color: #FB641B;
 }
 
-.info{
-    padding:20px;
-    width:100%;
+.info {
+    padding: 20px;
+    width: 100%;
     margin-bottom: 20px;
 }
 
-.deliver-date{
-    position:relative;
-    top:-80px;
-    float:right;
+.deliver-date {
+    position: relative;
+    top: -80px;
+    float: right;
 }
 
-.cart-specs{
-    padding:20px 0px;
+.cart-specs {
+    padding: 20px 0px;
 }
 
 .amount {
@@ -189,102 +218,188 @@ body{
     font-size: 18px;
 }
 
-.free-span{
-    font-size:18px;
+.free-span {
+    font-size: 18px;
     font-weight: 900;
-    margin-left:10px;
-    color:Green;
+    margin-left: 10px;
+    color: Green;
 }
 
-.charges-span{
-    margin-left:5px;
+.charges-span {
+    margin-left: 5px;
     text-decoration: line-through;
 }
 
-.offer{
-    font-size:19px;
-    font-weight:900;
-    color:green;
-    margin-left:10px;
+.offer {
+    font-size: 19px;
+    font-weight: 900;
+    color: green;
+    margin-left: 10px;
 }
 
-/* button for cart   */
-
 .counter-box {
-    display:flex;
-    position:relative;
-    left:270px;
-    bottom:100px;
-    width:110px;
-    height:50px;
+    display: flex;
+    position: relative;
+    left: 270px;
+    bottom: 100px;
+    width: 110px;
+    height: 50px;
     align-items: center;
-    background:#EFEFEF;
+    background: #EFEFEF;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
+
 button {
-    position:relative;
+    position: relative;
     padding: 10px 15px;
     font-size: 24px;
     border: none;
-    background:#67308D;
+    background: #67308D;
     color: white;
     cursor: pointer;
     border-radius: 5px;
 }
+
 button:hover {
     background: #4d2f81;
-    color:#FB641B;
+    color: #FB641B;
 }
+
 .count {
-    position:relative;
+    position: relative;
     width: 50px;
     text-align: center;
     font-size: 20px;
     margin: 0 10px;
 }
 
-.place-order{
-    padding:10px;
-    background:#67308D;
+.place-order {
+    padding: 10px;
+    background: #67308D;
 }
 
-.order-btn{
-    position:relative;
-    left:10px;
-    bottom:70px;
-    width:210px;
+.order-btn {
+    position: relative;
+    left: 10px;
+    bottom: 70px;
+    width: 210px;
     font-weight: 500;
-    background-color:#221737;
+    background-color: #221737;
 }
 
-.order-btn:hover{
-    background-color:#221737;
-    color:#FB641B;
+.order-btn:hover {
+    background-color: #221737;
+    color: #FB641B;
 }
 
-.Calc{
-    display:inline-block;
-    position:absolute;
-    right:50px;
-    top:180px;
-    width:400px;
-    height:480px;
-    background-color:#EFEFEF;
+.Calc {
+    display: inline-block;
+    position: absolute;
+    right: 20px;
+    top: 100px;
+    width: 460px;
+    height: 580px;
+    background-color: #EFEFEF;
 }
 
-.Calc h3{
-    padding:20px;
-    font-size:24px;
-    color:rgb(108, 104, 104);
+.Calc h3 {
+    padding: 20px;
+    font-size: 24px;
+    color: rgb(108, 104, 104);
 }
 
-.Calc div{
-    padding:20px;
-    font-size:20px;
+.Calc div {
+    padding: 20px;
+    font-size: 20px;
 }
-.amount{
-    font-size:24px;
-    font-weight:900;
+
+.address-dropdown,
+.payment-dropdown {
+    margin-top: 20px;
+    padding: 10px;
+    font-size: 18px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 300px;
+    background: white;
+}
+
+.dropdown-container {
+    position:relative;
+    margin: 20px 0;
+    top:-80px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    width: 50%;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.close {
+    float: right;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 15px;
+    margin-top: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.modal-content {
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    width: 50%;
+    border-radius: 5px;
+}
+.close {
+    float: right;
+    font-size: 28px;
+    cursor: pointer;
+}
+.close:hover {
+    color: red;
+}
+form {
+    display: flex;
+    flex-direction: column;
+}
+input {
+    margin-bottom: 10px;
+    padding: 5px;
 }
