product.html updated

--- a/src/main/resources/templates/admin/product.html
+++ b/src/main/resources/templates/admin/product.html
@@ -21,7 +21,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Product</th>
+                        <th>Product Title</th>
                         <th>Product Description</th>
                         <th>Images</th>
                         <th>Price</th>
